# Patache-Game-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT.txt  ClangFormat.cmake  LICENSE  README.md  README_en.md  clang-format.sh  meson.build  meson_options.txt
cmake/: ClangFormat.cmake  GeneratorMacroDetect.cmake  GetGitInfo.cmake  WindowsVulkanSDK.cmake
data/: CMakeLists.txt  GCC_FreeBSD_release.avif  GCC_Linux_release.avif  MSVC_Windows10.avif  config.yaml  meson.build  patata.yaml
data/Client Side Decoration Buttons/: CSDCloseButton.aseprite  CSDCloseButtonFocusLost.aseprite  CSDCloseButtonHover.aseprite  CSDCloseButtonPressed.ase  CSDMaximizeButton.aseprite  CSDMaximizeButtonFocusLost.aseprite  CSDMaximizeButtonHover.aseprite  CSDMaximizeButtonPressed.ase  CSDMaximizedButton.aseprite  CSDMaximizedButtonFocusLost.aseprite  CSDMaximizedButtonHover.aseprite  CSDMaximizedButtonPressed.ase  CSDMinimizeButton.aseprite  CSDMinimizeButtonFocusLost.aseprite  CSDMinimizeButtonHover.aseprite  CSDMinimizeButtonPressed.ase
data/LICENSES/: Apache-2.0.txt  ImGui_MIT.txt  MIT.txt  SDL3_zlib.txt  cglm_MIT.txt  fast_io_MIT.txt  rapidyaml_MIT.txt  zlib.txt
data/assets/: CMakeLists.txt
data/assets/Client Side Decoration Buttons/: CSDCloseButtonFocusLost.aseprite  CSDCloseButtonHover.aseprite  CSDMaximizeButton.aseprite  CSDMaximizedButtonFocusLost.aseprite  CSDMaximizedButtonHover.aseprite  CSDMinimizeButton.aseprite  CSDMinimizeButtonFocusLost.aseprite
data/assets/icon/: PatacheDebugIcon.hpp  PatacheIcon.hpp  PatacheReleaseIcon.hpp  patata_icon.hpp
docs/: Building_en.md  Building_es.md  Contributing_en.md  Contributing_es.md  NamingConvention_es.md
examples/Empty/: CMakeLists.txt  Empty.cpp  Empty.rc
examples/MultipleTriangles/: CMakeLists.txt  MultipleTriangles.cpp  MultipleTriangles.rc
examples/Triangle/: CMakeLists.txt  Triangle.cpp  Triangle.rc
include/PatacheEngine/: Color.hpp  Libexport.h  PatacheEngine.hpp  Queue.hpp  (+5 more)
src/: CMakeLists.txt  PatacheEngine.rc  PatataEngine.rc  meson.build
src/Core/: ClearColor.cpp  Config.hpp  Configuration.cpp  Configuration.hpp  Configuration_Funcs.hpp  CstdlibWrapped.hpp  CstringWrapped.hpp  EngineInfo.hpp  Input.cpp  Input.hpp  LinuxAndUnixMacro.h  LoadConfig.cpp  LoadConfig.hpp  Main.cpp  PatacheDebugIcon.hpp  PatacheEngine.cpp  PatacheReleaseIcon.hpp  PatataEngine.cpp  PatataEngineImpl.hpp  PrivateToPublicWrapper.cpp  Render.cpp  RenderWrapper.cpp  RenderWrapper.hpp  StructConfig.hpp  StructEngineInfo.hpp  Triangle.hpp  UnitSize.hpp  Wayland.hpp  WaylandWindow.cpp  WaylandWindow.hpp  WaylandWindow_Funcs.hpp  Window.cpp  Window.hpp  fast_io_buff.hpp
src/Core/WaylandCSD/: CSDCloseButtonFocusLostLittleEndian.hpp  CSDCloseButtonHoverLittleEndian.hpp  CSDCloseButtonLittleEndian.hpp  CSDMaximizeButtonFocusLostLittleEndian.hpp  CSDMaximizeButtonHoverLittleEndian.hpp  CSDMaximizeButtonLittleEndian.hpp  CSDMaximizedButtonFocusLostLittleEndian.hpp  CSDMaximizedButtonHoverLittleEndian.hpp  CSDMaximizedButtonLittleEndian.hpp  CSDMinimizeButtonFocusLostLittleEndian.hpp  CSDMinimizeButtonHoverLittleEndian.hpp  CSDMinimizeButtonLittleEndian.hpp  CloseButtonFocusLost_LittleEndian_CSD.hpp  CloseButtonHover_LittleEndian_CSD.hpp  CloseButtonPressed_LittleEndian_CSD.hpp  CloseButton_LittleEndian_CSD.hpp  MaximizeButtonFocusLost_LittleEndian_CSD.hpp  MaximizeButtonHover_LittleEndian_CSD.hpp  MaximizeButtonPressed_LittleEndian_CSD.hpp  MaximizeButton_LittleEndian_CSD.hpp  MaximizedButtonFocusLost_LittleEndian_CSD.hpp  MaximizedButtonHover_LittleEndian_CSD.hpp  MaximizedButtonPressed_LittleEndian_CSD.hpp  MaximizedButton_LittleEndian_CSD.hpp  MinimizeButtonFocusLost_LittleEndian_CSD.hpp  MinimizeButtonHover_LittleEndian_CSD.hpp  MinimizeButtonPressed_LittleEndian_CSD.hpp  MinimizeButton_LittleEndian_CSD.hpp  ShadowBottomLeft_LittleEndian_CSD.hpp  ShadowBottomRight_LittleEndian_CSD.hpp  ShadowBottom_LittleEndian_CSD.hpp  ShadowLeft_LittleEndian_CSD.hpp  ShadowRight_LittleEndian_CSD.hpp  ShadowTopLeft_LittleEndian_CSD.hpp  ShadowTopRight_LittleEndian_CSD.hpp  ShadowTop_LittleEndian_CSD.hpp
src/ImGUI/: DrawDebugUI.hpp  SetupImgui.cpp  SetupImgui.hpp
src/ImGui/: DebugUI.cpp  DebugUI.hpp  DrawDebugUI.hpp  InterDisplay-Medium.hpp  SetupImgui.cpp  SetupImgui.hpp
src/Log/: ColorTerminal.hpp  ExitLog.hpp  FastIOBuff.hpp  Log.hpp  LogMacroUtils.hpp  Message.cpp  Message.hpp  Messages.cpp  Messages.hpp  Setup_Vulkan_Log.cpp  Setup_Vulkan_Log.hpp  StartLogInfo.cpp  StartLogInfo.hpp  Start_Patata_Log_Info.cpp  Start_Patata_Log_Info.hpp  TerminalColors.hpp  Vulkan_Info.cpp  Vulkan_Info.hpp  Vulkan_SetupLog.cpp  Vulkan_SetupLog.hpp  WindowLog.cpp  WindowLog.hpp  YamlErrors.cpp
src/Log/Win/: Setup_Vulkan_Log_Win.cpp  Start_Patata_Log_Info_Win.cpp  Vulkan_Info_Win.cpp  WindowLogWin.cpp
src/RaccoonRenderer/: BufferSubAllocation.cpp  Draw.cpp  RaccoonRenderer.cpp  RaccoonRenderer.hpp  RaccoonRendererWrapper.cpp  VulkanBackend.hpp
src/RaccoonRenderer/Shaders/: CMakeLists.txt  Triangle.frag  Triangle.vert
src/RaccoonRenderer/Vulkan/: ClearColor.cpp  Setup_Vulkan_Renderer.cpp  Setup_Vulkan_Renderer.hpp  VmaUsage.cpp  Vulkan_Buffer.cpp  Vulkan_Buffer.hpp  Vulkan_CommandBuffer.cpp  Vulkan_CommandBuffer.hpp  Vulkan_CommandPool.cpp  Vulkan_CommandPoolAndBuffer.cpp  Vulkan_CommandPoolAndBuffer.hpp  Vulkan_DepthBuffer.cpp  Vulkan_DepthBuffer.hpp  Vulkan_FrameBuffer.cpp  Vulkan_FrameBuffer.hpp  Vulkan_ImageView.cpp  Vulkan_ImageView.hpp  Vulkan_Instance.cpp  Vulkan_Instance.hpp  Vulkan_LogicalDevice_And_GrahicsQueue.cpp  Vulkan_LogicalDevice_And_GrahicsQueue.hpp  Vulkan_Logical_And_Queue.cpp  Vulkan_PipeLine.cpp  Vulkan_PipeLine.hpp  Vulkan_Render.cpp  Vulkan_Render.hpp  Vulkan_RenderPass.cpp  Vulkan_RenderPass.hpp  Vulkan_Select_Device.cpp  Vulkan_Select_Device.hpp  Vulkan_SetupRenderer.cpp  Vulkan_SetupRenderer.hpp  Vulkan_SetupRenderer_Funcs.hpp  Vulkan_SincronizationPrimitives.cpp  Vulkan_SincronizationPrimitives.hpp  Vulkan_SwapChain.cpp  Vulkan_SwapChain.hpp  Vulkan_Swapchain.cpp  Vulkan_Swapchain.hpp
src/Window/: Window.cpp  Window.hpp
(+6 files in other folders)
